[tool.poetry]
name = "commonlib"
version = "0.1.0"
description = "Common python functions between mySociety projects. Basic config to recognize as package."
authors = ["Alex Parsons <alex.parsons@mysociety.org>"]
readme = "README.txt"
packages = [{ include = "pylib" }]

[tool.poetry.dependencies]
python = "^3.9"
pyyaml = "^6.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
